[gd_scene load_steps=9 format=3 uid="uid://dlrrlycc87pm"]

[ext_resource type="Texture2D" uid="uid://ctirpvajsc5p0" path="res://assets/ui/kenney_ui-pack/uipack_rpg_sheet.png" id="1_a3v86"]
[ext_resource type="Script" path="res://scripts/stats_ui.gd" id="1_ab6vh"]
[ext_resource type="Texture2D" uid="uid://ddwhs6u5vu8ng" path="res://assets/ui/kenney_ui-pack/individual/meeple.png" id="2_kgpsy"]
[ext_resource type="Theme" uid="uid://bagpxiwy8o2ep" path="res://new_theme.tres" id="3_7ofo0"]
[ext_resource type="Texture2D" uid="uid://cn8ub268co1ou" path="res://assets/ui/kenney_ui-pack/individual/apple.png" id="4_0n4uh"]
[ext_resource type="Texture2D" uid="uid://c1lk5kajjw00w" path="res://assets/ui/kenney_ui-pack/individual/flask.png" id="4_8xfed"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88bun"]
resource_local_to_scene = true
bg_color = Color(0.768627, 0.670588, 0, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_unvav"]
bg_color = Color(0.341176, 0.670588, 0.984314, 1)

[node name="StatsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ab6vh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color(0.172549, 0.968627, 1, 0.380392)
layout_mode = 0
offset_right = 196.0
offset_bottom = 110.0
texture = ExtResource("1_a3v86")
region_rect = Rect2(0, 331, 190, 45)
patch_margin_left = 4
patch_margin_top = 41
patch_margin_right = 4
patch_margin_bottom = 41

[node name="MentalHealthIndicator" type="Control" parent="."]
anchors_preset = 0
offset_right = 196.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="MentalHealthIndicator"]
z_index = 1
layout_mode = 2
offset_left = 15.0
offset_top = 12.0
offset_right = 47.0
offset_bottom = 44.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("2_kgpsy")

[node name="TextureRect2" type="TextureRect" parent="MentalHealthIndicator"]
self_modulate = Color(0.254902, 0.258824, 0.266667, 1)
layout_mode = 2
offset_left = 17.0
offset_top = 14.0
offset_right = 49.0
offset_bottom = 46.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("2_kgpsy")

[node name="MHProgressBar" type="ProgressBar" parent="MentalHealthIndicator"]
layout_direction = 2
layout_mode = 2
offset_left = 45.0
offset_top = 23.0
offset_right = 170.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_7ofo0")
min_value = -100.0
show_percentage = false

[node name="EnergyIndicator" type="Control" parent="."]
anchors_preset = 0
offset_top = 28.0
offset_right = 196.0
offset_bottom = 68.0

[node name="TextureRect" type="TextureRect" parent="EnergyIndicator"]
z_index = 1
layout_mode = 2
offset_left = 15.0
offset_top = 12.0
offset_right = 47.0
offset_bottom = 44.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("4_0n4uh")

[node name="TextureRect2" type="TextureRect" parent="EnergyIndicator"]
self_modulate = Color(0.254902, 0.258824, 0.266667, 1)
layout_mode = 2
offset_left = 17.0
offset_top = 14.0
offset_right = 49.0
offset_bottom = 46.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("4_0n4uh")

[node name="EnergyProgressBar" type="ProgressBar" parent="EnergyIndicator"]
layout_direction = 2
layout_mode = 2
offset_left = 45.0
offset_top = 23.0
offset_right = 170.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_7ofo0")
theme_override_styles/fill = SubResource("StyleBoxFlat_88bun")
value = 50.0
show_percentage = false

[node name="ProductivityIndicator" type="Control" parent="."]
anchors_preset = 0
offset_top = 56.0
offset_right = 196.0
offset_bottom = 96.0

[node name="TextureRect" type="TextureRect" parent="ProductivityIndicator"]
z_index = 1
layout_mode = 2
offset_left = 15.0
offset_top = 12.0
offset_right = 47.0
offset_bottom = 44.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("4_8xfed")

[node name="TextureRect2" type="TextureRect" parent="ProductivityIndicator"]
self_modulate = Color(0.254902, 0.258824, 0.266667, 1)
layout_mode = 2
offset_left = 17.0
offset_top = 14.0
offset_right = 49.0
offset_bottom = 46.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("4_8xfed")

[node name="ProdProgressBar" type="ProgressBar" parent="ProductivityIndicator"]
layout_direction = 2
layout_mode = 2
offset_left = 45.0
offset_top = 23.0
offset_right = 170.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_7ofo0")
theme_override_styles/fill = SubResource("StyleBoxFlat_unvav")
value = 50.0
show_percentage = false
